tests/snapshots/integration__fail__add_2_types.rl.snap
---
source: tests/integration.rs
expression: output
---
ERROR plrs: type error: expected numeric but got ["I64", "String"]
