tests/snapshots/integration__fail__add_2_types.sol.snap
---
source: tests/integration.rs
expression: output
---
ERROR sol: type error: expected numeric but got ["I64", "String"]
