tests/snapshots/integration__fail__assign_function_to_variable.rl.snap
---
source: tests/integration.rs
expression: output
---
ERROR plrs: type error: variable not found with name 'test'
