tests/snapshots/integration__fail__call_before_declare_function.rl.snap
---
source: tests/integration.rs
expression: output
---
ERROR plrs: no function matching name 'test' found
