tests/snapshots/integration__fail__constant_literal_only.rl.snap
---
source: tests/integration.rs
expression: output
---
ERROR plrs: expected token: got Add, expected: EndOfLine
