tests/snapshots/integration__fail__constant_literal_only.sol.snap
---
source: tests/integration.rs
expression: output
---
error: unexpected token
  ┌─ tests/files/fail/constant_literal_only.sol:1:16
  │
1 │ const test = 2 + 2;
  │                ^ expected `EndOfLine`, got `Add`
