tests/snapshots/integration__fail__constant_mutation.rl.snap
---
source: tests/integration.rs
expression: output
---
error: mutation not allowed for variable `x`
