tests/snapshots/integration__fail__dynamic_typing.rl.snap
---
source: tests/integration.rs
expression: output
---
ERROR plrs: type error: expected String but got I64
