tests/snapshots/integration__fail__fail_parsing.rl.snap
---
source: tests/integration.rs
expression: output
---
error: unexpected token
  ┌─ tests/files/fail/fail_parsing.rl:1:10
  │
1 │ fn test( {
  │          ^ expected `Identifier`, got `OpenBrace`
