tests/snapshots/integration__fail__function_object.rl.snap
---
source: tests/integration.rs
expression: output
---
ERROR plrs: variable 'test' not found in scope
