tests/snapshots/integration__fail__function_object.sol.snap
---
source: tests/integration.rs
expression: output
---
ERROR sol: type error: variable not found with name 'test'
